--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,15 +21,18 @@
   </header>
   <div class="container">
 
-    <div class="container-fluid">
-      <footer class="row">
-        <br><br>
-      </footer>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./justin.js"></script>
+  </div>
+
+  <div class="container-fluid">
+    <footer class="row">
+      <br><br>
+    </footer>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
